Scrolltotop - fix CSS alignment

--- a/scrolltotop/scrolltotop.css
+++ b/scrolltotop/scrolltotop.css
@@ -4,7 +4,7 @@
   margin-bottom: 0;
   display: block;
   position: fixed;
-  right: 1.5em; bottom: 1.5em;
+  right: 1.5em; bottom: 9em;
   z-index: 10;
   width: 2.5em;
   height: 2.5em;
@@ -15,22 +15,25 @@
   opacity: 0;
   font-size: 1em;
   background: #333;
-  border-color: #333;
+  border: 1px solid #333;
   color: #fff;
   visibility: hidden;
   overflow: hidden;
-  transition: opacity .3s 0s, visibility 0s .3s;
+  transition: opacity .25s 0s, visibility 0s .25s;
 }
 
 .scrollToTop .fa {
-  position: relative;
-  top: -5px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -.55em;
+  margin-left: -.55em;
 }
 
 .scrollToTop-visible {
   visibility: visible;
   opacity: .5;
-  transition: opacity .3s 0s, visibility 0s 0s;
+  transition: opacity .25s 0s, visibility 0s 0s;
 }
 
 .scrollToTop:hover,
